Fix input overflow issue by applying box-sizing
- Remove unnecessary max-width for input
- Add hover effect for add button

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     /* border: 1px solid red; */
 
@@ -51,6 +52,11 @@ body {
     color: aliceblue;
     font-size: 20px;
     margin: 20px 0;
+}
+
+.add-btn:hover {
+    background-color: #3a4c8a; /* Darker shade for hover */
+    cursor: pointer; /* Pointer cursor on hover */
 }
 
 .tasks {
